[package]
name = "dali_tools"
version = "0.1.0"
authors = ["ksb <ksb@fluffware.se>"]
edition = "2018"

[features]
helvar510_driver= ["libusb-async"]
simulator=[]
pru_driver= []

[dependencies]
futures	= "0.3.*"
tokio= {version = "1.9", features = ["macros", "rt-multi-thread", "time", "io-util", "sync", "fs"]}
tokio-stream = "0.1"
clap = "2.33.*"
rand = "*"
libusb-async = { git = "https://github.com/fluffware/libusb-rs-async.git", optional = true}
lazy_static = "1"
nix = "0.22"

[[bin]]
name = "dali_tools"
path = "src/main.rs"

[[bin]]
name = "swap_addr"
path = "src/swap_addr.rs"

[[bin]]
name = "query_device"
path = "src/query_device.rs"

[[bin]]
name = "identify"
path = "src/identify.rs"

[[bin]]
name = "helvar_dump"
path = "src/helvar_dump.rs"
required-features = ["helvar510_driver"]

[[bin]]
name = "dali_monitor"
path = "src/dali_monitor.rs"
